// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SidebarToggle component > should show the "Toggle sidebar"-button with sidebar opened and closed 1`] = `
"<button type="button" aria-label="Open sidebar to view details" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-chrome oc-button-raw-inverse oc-button-chrome-raw-inverse no-hover oc-my-s" id="files-toggle-sidebar" issidebaropen="true">
  <!--v-if-->
  <!-- @slot Content of the button --> <span class="oc-icon oc-icon-m"><!----></span>
</button>"
`;

exports[`SidebarToggle component > should show the "Toggle sidebar"-button with sidebar opened and closed 2`] = `
"<button type="button" aria-label="Open sidebar to view details" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-chrome oc-button-raw-inverse oc-button-chrome-raw-inverse no-hover oc-my-s" id="files-toggle-sidebar" issidebaropen="false">
  <!--v-if-->
  <!-- @slot Content of the button --> <span class="oc-icon oc-icon-m"><!----></span>
</button>"
`;
